css/creative.css
/*!
 * Start Bootstrap - Createive v4.0.0-beta (http://startbootstrap.com/template-overviews/creative)
 * Copyright 2013-2017 Start Bootstrap
 * Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap-creative/blob/master/LICENSE)
 */
body,
html {
  width: 100%;
  height: 100%; }

@media only screen and (max-width: 991px) {
  body {
    padding-top: 50px;
  }
}

body {
  font-family: 'Merriweather', 'Helvetica Neue', Arial, sans-serif; }

hr {
  max-width: 50px;
  border-width: 3px;
  border-color: #0D8907; }

hr.light {
  border-color: white; }

a {
  color: #0D8907;
  -webkit-transition: all 0.2s;
  -moz-transition: all 0.2s;
  transition: all 0.2s; }
  a:focus, a:hover {
    color: #0D8907; }

h1,
h2,
h3,
h4,
h5,
h6 {
  font-family: 'Open Sans', 'Helvetica Neue', Arial, sans-serif; }

p {
  font-size: 16px;
  line-height: 1.5;
  margin-bottom: 20px; }

.bg-primary {
  background-color: #0D8907 !important; }

.bg-dark {
  color: white;
  background-color: #222222 !important; }

.text-faded {
  color: rgba(255, 255, 255, 0.7); }

section {
  padding: 100px 0; }

.section-heading {
  margin-top: 0; }

::-moz-selection {
  color: white;
  background: #222222;
  text-shadow: none; }

::selection {
  color: white;
  background: #222222;
  text-shadow: none; }

img::selection {
  color: white;
  background: transparent; }

img::-moz-selection {
  color: white;
  background: transparent; }

body {
  -webkit-tap-highlight-color: #222222; }

#mainNav {
  border-color: rgba(34, 34, 34, 0.05);
  background-color: white;
  font-family: 'Open Sans', 'Helvetica Neue', Arial, sans-serif;
  -webkit-transition: all 0.2s;
  -moz-transition: all 0.2s;
  transition: all 0.2s; }
  #mainNav .navbar-brand {
    font-weight: 700;
    text-transform: uppercase;
    color: #0D8907;
    font-family: 'Open Sans', 'Helvetica Neue', Arial, sans-serif; }
    #mainNav .navbar-brand:focus, #mainNav .navbar-brand:hover {
      color: #0D8907; }
  #mainNav .navbar-toggle {
    font-size: 12px;
    font-weight: 700;
    text-transform: uppercase;
    color: #222222; }
  #mainNav .navbar-nav > li.nav-item > a.nav-link:focus,
  #mainNav .navbar-nav > li.nav-item > a.nav-link {
    font-size: 13px;
    font-weight: 700;
    text-transform: uppercase;
    color: #222222; }
    #mainNav .navbar-nav > li.nav-item > a.nav-link:focus:hover,
    #mainNav .navbar-nav > li.nav-item > a.nav-link:hover {
      color: #0D8907; }
    #mainNav .navbar-nav > li.nav-item > a.nav-link:focus.active,
    #mainNav .navbar-nav > li.nav-item > a.nav-link.active {
      color: #0D8907 !important;
      background-color: transparent; }
      #mainNav .navbar-nav > li.nav-item > a.nav-link:focus.active:hover,
      #mainNav .navbar-nav > li.nav-item > a.nav-link.active:hover {
        background-color: transparent; }
  @media (min-width: 992px) {
    #mainNav {
      border-color: rgba(255, 255, 255, 0.3);
      background-color: transparent; }
      #mainNav .navbar-brand {
        color: rgba(255, 255, 255, 0.7); }
        #mainNav .navbar-brand:focus, #mainNav .navbar-brand:hover {
          color: white; }
      #mainNav .navbar-nav > li.nav-item > a.nav-link,
      #mainNav .navbar-nav > li.nav-item > a.nav-link:focus {
        color: rgba(255, 255, 255, 0.7); }
        #mainNav .navbar-nav > li.nav-item > a.nav-link:hover,
        #mainNav .navbar-nav > li.nav-item > a.nav-link:focus:hover {
          color: white; }
      #mainNav.navbar-shrink {
        border-color: rgba(34, 34, 34, 0.05);
        background-color: white; }
        #mainNav.navbar-shrink .navbar-brand {
          font-size: 16px;
          color: #0D8907; }
          #mainNav.navbar-shrink .navbar-brand:focus, #mainNav.navbar-shrink .navbar-brand:hover {
            color: #0D8907; }
        #mainNav.navbar-shrink .navbar-nav > li.nav-item > a.nav-link,
        #mainNav.navbar-shrink .navbar-nav > li.nav-item > a.nav-link:focus {
          color: #222222; }
          #mainNav.navbar-shrink .navbar-nav > li.nav-item > a.nav-link:hover,
          #mainNav.navbar-shrink .navbar-nav > li.nav-item > a.nav-link:focus:hover {
            color: #0D8907; } }

header.masthead {
  position: relative;
  width: 100%;
  height: 100%;
  min-height: auto;
  text-align: center;
  color: white;
  background-image: url("../img/sherifgs-header.jpg");
  background-position: 70%;
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover; }
  header.masthead .header-content {
    position: relative;
    width: 100%;
    padding: 150px 15px 100px;
    text-align: center;
    top: 15%; }
    header.masthead .header-content .header-content-inner h1 {
      font-size: 50px;
      font-weight: 400;
      margin-top: 0;
      margin-bottom: 0;
      font-family: 'Niconne', cursive; }
    header.masthead .header-content .header-content-inner hr {
      margin: 30px auto; }
    header.masthead .header-content .header-content-inner p {
      font-size: 16px;
      font-weight: 300;
      margin-bottom: 50px;
      color: rgba(255, 255, 255, 0.7); }
  @media (min-width: 768px) {
    header.masthead {
      min-height: 600px;
      background-position: center; }
      header.masthead .header-content {
        position: absolute;
        top: 70%;
        padding: 0 50px;
        -webkit-transform: translateY(-50%);
        -ms-transform: translateY(-50%);
        transform: translateY(-50%); }
        header.masthead .header-content .header-content-inner {
          max-width: 1000px;
          margin-right: auto;
          margin-left: auto; }
          header.masthead .header-content .header-content-inner h1 {
            font-size: 60px; }
          header.masthead .header-content .header-content-inner p {
            font-size: 18px;
            max-width: 80%;
            margin-right: auto;
            margin-left: auto; } }

.service-box {
  max-width: 400px;
  margin: 50px auto 0; }
  @media (min-width: 992px) {
    .service-box {
      margin: 20px auto 0; } }
  .service-box p {
    margin-bottom: 0; }

.portfolio-box {
  position: relative;
  display: block;
  max-width: 650px;
  margin: 0 auto; }
  .portfolio-box .portfolio-box-caption {
    position: absolute;
    bottom: 0;
    display: block;
    width: 100%;
    height: 100%;
    text-align: center;
    opacity: 0;
    color: white;
    background: rgba(240, 95, 64, 0.9);
    -webkit-transition: all 0.2s;
    -moz-transition: all 0.2s;
    transition: all 0.2s; }
    .portfolio-box .portfolio-box-caption .portfolio-box-caption-content {
      position: absolute;
      top: 50%;
      width: 100%;
      transform: translateY(-50%);
      text-align: center; }
      .portfolio-box .portfolio-box-caption .portfolio-box-caption-content .project-category,
      .portfolio-box .portfolio-box-caption .portfolio-box-caption-content .project-name {
        padding: 0 15px;
        font-family: 'Open Sans', 'Helvetica Neue', Arial, sans-serif; }
      .portfolio-box .portfolio-box-caption .portfolio-box-caption-content .project-category {
        font-size: 14px;
        font-weight: 600;
        text-transform: uppercase; }
      .portfolio-box .portfolio-box-caption .portfolio-box-caption-content .project-name {
        font-size: 18px; }
  .portfolio-box:hover .portfolio-box-caption {
    opacity: 1; }
  .portfolio-box:focus {
    outline: none; }
  @media (min-width: 768px) {
    .portfolio-box {
      height: 250px;
    }
    .portfolio-box .portfolio-box-caption .portfolio-box-caption-content .project-category {
      font-size: 16px; }
    .portfolio-box .portfolio-box-caption .portfolio-box-caption-content .project-name {
      font-size: 22px; } }

.call-to-action {
  padding: 50px 0; }
  .call-to-action h2 {
    margin: 0 auto 20px; }

.text-primary {
  color: #0D8907 !important; }

.no-gutter > [class*='col-'] {
  padding-right: 0;
  padding-left: 0; }

.btn-default {
  color: #222222;
  border-color: white;
  background-color: white; }
  .btn-default.focus, .btn-default:focus {
    color: #222222;
    border-color: #bfbfbf;
    background-color: #e6e6e6; }
  .btn-default:hover {
    color: #222222;
    border-color: #e0e0e0;
    background-color: #e6e6e6; }
  .btn-default.active, .btn-default:active,
  .open > .btn-default.dropdown-toggle {
    color: #222222;
    border-color: #e0e0e0;
    background-color: #e6e6e6; }
    .btn-default.active.focus, .btn-default.active:focus, .btn-default.active:hover, .btn-default:active.focus, .btn-default:active:focus, .btn-default:active:hover,
    .open > .btn-default.dropdown-toggle.focus,
    .open > .btn-default.dropdown-toggle:focus,
    .open > .btn-default.dropdown-toggle:hover {
      color: #222222;
      border-color: #bfbfbf;
      background-color: #d4d4d4; }
  .btn-default.active, .btn-default:active,
  .open > .btn-default.dropdown-toggle {
    background-image: none; }
  .btn-default.disabled.focus, .btn-default.disabled:focus, .btn-default.disabled:hover, .btn-default[disabled].focus, .btn-default[disabled]:focus, .btn-default[disabled]:hover,
  fieldset[disabled] .btn-default.focus,
  fieldset[disabled] .btn-default:focus,
  fieldset[disabled] .btn-default:hover {
    border-color: white;
    background-color: white; }
  .btn-default .badge {
    color: white;
    background-color: #222222; }

.btn-primary {
  color: white;
  border-color: #0D8907;
  background-color: #0D8907; }
  .btn-primary.focus, .btn-primary:focus {
    color: white;
    border-color: #a4270d;
    background-color: #eb3812; }
  .btn-primary:hover {
    color: white;
    border-color: #e13612;
    background-color: #eb3812; }
  .btn-primary.active, .btn-primary:active,
  .open > .btn-primary.dropdown-toggle {
    color: white;
    border-color: #e13612;
    background-color: #eb3812; }
    .btn-primary.active.focus, .btn-primary.active:focus, .btn-primary.active:hover, .btn-primary:active.focus, .btn-primary:active:focus, .btn-primary:active:hover,
    .open > .btn-primary.dropdown-toggle.focus,
    .open > .btn-primary.dropdown-toggle:focus,
    .open > .btn-primary.dropdown-toggle:hover {
      color: white;
      border-color: #a4270d;
      background-color: #c93110; }
  .btn-primary.active, .btn-primary:active,
  .open > .btn-primary.dropdown-toggle {
    background-image: none; }
  .btn-primary.disabled.focus, .btn-primary.disabled:focus, .btn-primary.disabled:hover, .btn-primary[disabled].focus, .btn-primary[disabled]:focus, .btn-primary[disabled]:hover,
  fieldset[disabled] .btn-primary.focus,
  fieldset[disabled] .btn-primary:focus,
  fieldset[disabled] .btn-primary:hover {
    border-color: #0D8907;
    background-color: #0D8907; }
  .btn-primary .badge {
    color: #0D8907;
    background-color: white; }

.btn {
  font-weight: 700;
  text-transform: uppercase;
  border: none;
  border-radius: 300px;
  font-family: 'Open Sans', 'Helvetica Neue', Arial, sans-serif; }

.btn-xl {
  padding: 15px 30px; }


/* From https://github.com/lipis/flag-icon-css/ */
.flag-icon-background {
  background-size: contain;
  background-position: 50%;
  background-repeat: no-repeat;
}
.flag-icon {
  background-size: contain;
  background-position: 50%;
  background-repeat: no-repeat;
  position: relative;
  display: inline-block;
  width: 28px;
  height: 21px;
  line-height: 1em;
}
.flag-icon:before {
  content: "\00a0";
}
.flag-icon.flag-icon-squared {
  width: 1em;
}

.flag-icon-pt {
  background-image: url(../img/flags/pt.svg);
}
.flag-icon-pt.flag-icon-squared {
  background-image: url(../img/flags/pt-square.svg);
}
/* End flag section */

